--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,20 @@
-server.port=9999
-spring.application.name=LicenseService
-spring.cloud.config.uri=http://localhost:8888
-spring.cloud.config.enabled=true
-eureka.instance.prefer-ip-address=true
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
+#server.port=9999
+#spring.application.name=LicenseService
+#spring.cloud.config.uri=http://localhost:8888
+#spring.cloud.config.enabled=true
+#eureka.instance.prefer-ip-address=true#
+#eureka.client.register-with-eureka=true
+#eureka.client.fetch-registry=true
 eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
-logging.level.org.springframework.web=warn
-logging.level.com.javatechnology=debug
-logging.level.com.netflix.appinfo=debug
+#logging.level.org.springframework.web=warn
+#logging.level.com.javatechnology=debug
+#logging.level.com.netflix.appinfo=debug
 
+#spring.cloud.stream.bindings.input.destination=orgChangetopic
+#spring.cloud.stream.bindings.input.content-type=application/json
+#spring.cloud.stream.kafka.binder.brokers=localhost
+redis.server=localhost
+redis.port=6666
+#security.oauth2.client.access-token-uri=http://localhost:9963/auth/oauth/token
+
+#spring.cloud.stream.kafka.binder.transaction.producer.required-groups=licensingGroup
